# Windows-and-Doors-Near-Me-LLC

./: .replit  app.py  board_app.py  claude_chat.py  claude_chat_fixed.py  claude_suggestion_20250706_023948.py  code-changes-summary.md  complete-dashboard-code.tsx  main.py  package-lock.json  package.json  pyproject.toml  replit.md  simple_app.py  tailwind.config.ts
attached_assets/: Pasted--1-Fix-the-evaluateFormula-function-around-line-336-const-evaluateFormula-formula-item--1751853181079_1751853181082.txt  Pasted--Integration-points-for-the-Monday-style-formula-system-1-Replace-your-existing-evaluateFor-1751854490374_1751854490376.txt  Pasted--metadata-source-V300-SERIES-xlsx-series-Trinsic-V300-extracted-1750377690382_1750377690382.txt  Pasted-Build-me-a-Monday-com-style-board-builder-in-Flask-using-Python-Jinja2-templates-SQLAlchemy-and-J-1751004528902_1751004528903.txt  Pasted-Continuing-from-the-original-request-here-s-exactly-how-the-integration-between-the-project-managem-1751320968638_1751320968639.txt  Pasted-Every-interaction-must-be-modular-atomic-and-update-only-what-s-necessary-If-a-user-edits-one-fie-1751321021131_1751321021131.txt  Pasted-Fix-Enhance-Unified-Board-Replit-Instructions-1-Make-Add-Sub-Item-Add-Folder-Functional--1751347473693_1751347473693.txt  Pasted-Hi-team-I-need-you-to-fully-merge-the-project-management-board-with-the-new-dashboard-interface-so-1751320870479_1751320870480.txt  Pasted-I-want-to-expand-the-project-board-by-improving-the-existing-columns-and-adding-new-ones-to-make-the-1751255231142_1751255231143.txt  (+6 more)
client/: index.html
(+119 files in other folders)
